--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,9 @@
 	<packaging>war</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 	<dependencies>
 		<!-- SERVLET -->
 		<dependency>
