--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,8 +3,21 @@ image: gitpod/workspace-mysql:latest
 ports:
 - name: Aplicação
   port: 8080
+  onOpen: open-preview
   visibility: public
 
 tasks:
   - init: mysql < DDL.sql
 
+  - init: |
+      sudo apt-get update
+      sudo apt-get install -y openjdk-8-jdk  
+
+vscode:
+  extensions:
+    - vscjava.vscode-java-pack
+    - redhat.java
+    - vscjava.vscode-java-debug
+    - vscjava.vscode-java-dependency
+    - vscjava.vscode-java-test
+    - vscjava.vscode-maven
