--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,15 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.2.3</version>
 			</plugin>
+			<plugin>
+            	<groupId>org.apache.tomcat.maven</groupId>
+            	<artifactId>tomcat8-maven-plugin</artifactId>
+            	<version>3.0</version>
+            	<configuration>
+                	<port>8080</port>
+                	<path>/</path>
+            	</configuration>
+        	</plugin>			
 		</plugins>
 	</build>
 </project>
