--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,13 +9,13 @@ ports:
 tasks:
   # Instala o Java 1.8 e o TomCat 8.5
   - init: |
-      
+
       sudo apt-get update
       sudo apt-get install -y openjdk-8-jdk  
       export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
       export PATH=$JAVA_HOME/bin:$PATH  
 
-  #Cria as tabels no banco de dados e abre o MySql
+  #Cria as tabelas no banco de dados e abre o MySql
   - name: MySQL
     init: mysql < DDL.sql
 
