--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -12,9 +12,8 @@ ports:
 image: gitpod/workspace-mysql:latest
 
 tasks:
-  # Instala o Java 1.8 e o TomCat 8.5
+  # Instala o Java 1.8 e muda o ambiente para esta versão
   - init: |
-
       sudo apt-get update
       sudo apt-get install -y openjdk-8-jdk  
       export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
@@ -22,12 +21,17 @@ tasks:
 
   #Cria as tabelas no banco de dados e abre o MySql
   - name: MySQL
-    init: mysql < DDL.sql
+    init: |
+      while ! mysqladmin ping -h localhost --silent; do 
+          sleep 1
+      done
+      mysql < DDL.sql
 
   #1) Executa o MySQL
   #2) Abre o banco de dados da aplicação
   #3) Exibe as tabelas criadas
-  - command: mysql itall_dev -e "show tables"
+  - command: |
+      mysql itall_dev -e "show tables"
 
 # Estas extensões são reclamadas pelo ambiente se usado o vscode.
 vscode:
