--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -13,10 +13,15 @@ image: gitpod/workspace-mysql:latest
 
 tasks:
   # Instala o Java 1.8 e muda o ambiente para esta versão
+  # Instala o tomcat 8.5
   - name: Down Java 1.8
     init: |
       PS1='$ '
       clear
+      wget https://archive.apache.org/dist/tomcat/tomcat-8/v8.5.70/bin/apache-tomcat-8.5.70.tar.gz
+      tar -xzvf apache-tomcat-8.5.70.tar.gz
+      export CATALINA_HOME=$HOME/apache-tomcat-8.5.70
+      export PATH=$CATALINA_HOME/bin:$PATH
       sudo apt-get update
       sudo apt-get install -y openjdk-8-jdk  
       export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
