--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.itall</groupId>
-	<artifactId>comercial</artifactId>
+	<artifactId>itall</artifactId>
 	<version>1.01.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<properties>
@@ -56,6 +56,13 @@
 			<version>1.16.0</version>
 		</dependency>
 	</dependencies>
+	<!-- TomCat 8.5.97-->
+    <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-catalina</artifactId>
+        <version>8.5.97</version>
+        <scope>provided</scope>
+    </dependency>
 	<build>
 		<plugins>
 			<plugin>
@@ -77,7 +84,7 @@
             	<version>3.0</version>
             	<configuration>
                 	<port>8080</port>
-                	<path>/</path>
+                	<path>/itall</path>
             	</configuration>
         	</plugin>			
 		</plugins>
