--- a/pom.xml
+++ b/pom.xml
@@ -82,10 +82,19 @@
             	<groupId>org.apache.tomcat.maven</groupId>
             	<artifactId>tomcat8-maven-plugin</artifactId>
             	<version>3.0</version>
-            	<configuration>
-                	<port>8080</port>
-                	<path>/itall</path>
-            	</configuration>
+				<executions>
+					<execution>
+						<id>tomcat-run</id>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<phase>pre-integration-test</phase>
+						<configuration>
+							<port>8080</port>
+							<path>/itall</path>
+						</configuration>
+					</execution>
+            	</executions>
         	</plugin>			
 		</plugins>
 	</build>
