--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -16,35 +16,30 @@ tasks:
   - name: DownJava8
     init: |
       clear
+      echo "-----------------------------------------"
+      echo "Instalando o Java 8...
+      echo "-----------------------------------------"
       sudo apt-get update
       sudo apt-get install -y openjdk-8-jdk  
       export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
       export PATH=$JAVA_HOME/bin:$PATH  
-      echo "-----------------------------------------"
-      echo "Subindo a aplicação..."
-      echo "-----------------------------------------"
-      mvn clean package
-
-  #Cria as tabelas no banco de dados e abre o MySql
-  - name: MySQL
-    openMode: split-left
-    init: |
-      clear
       echo "-----------------------------------------"
       echo "Aguardando o MySQL subir..."
       echo "-----------------------------------------"
       while ! mysqladmin ping -h localhost --silent; do 
           sleep 1
       done
-      echo "Criando as tabelas..."
+      echo "Criando as tabelas no banco de dados..."
       mysql < DDL.sql
       echo "Tabelas criadas."
       sudo touch /usr/lib/jvm/java-8-openjdk-amd64/tabelas_criadas
-      sleep 2
-      exit
+      echo "-----------------------------------------"
+      echo "Subindo a aplicação..."
+      echo "-----------------------------------------"
+      mvn clean package
 
   # Exibe as tabelas criadas no banco
-  - openMode: split-right
+  - openMode: split-left
     command: |
       PS1='(Digite "mysql ital_dev" para entrar):$ '
       clear
