--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -12,8 +12,28 @@ ports:
 image: gitpod/workspace-mysql:latest
 
 tasks:
+  # Exibe as tabelas criadas no banco
+  - openMode: split-left
+    name: MySQL
+    command: |
+      PS1='MySQL:$ '
+      clear
+      echo "-----------------------------------------"
+      echo "Aguardando a criação das tabelas..."
+      echo "-----------------------------------------"
+      while true; do
+        if [ -f /usr/lib/jvm/java-8-openjdk-amd64/tabelas_criadas ]; then
+          break
+        else
+          sleep 1
+        fi
+      done
+      clear
+      mysql itall_dev
+
   # Instala o Java 1.8 e muda o ambiente para esta versão
-  - name: DownJava8
+  - name: Server
+    openMode: split-right
     init: |
       clear
       echo "-----------------------------------------"
@@ -29,7 +49,9 @@ tasks:
       while ! mysqladmin ping -h localhost --silent; do 
           sleep 1
       done
+      echo "-----------------------------------------"
       echo "Criando as tabelas no banco de dados..."
+      echo "-----------------------------------------"
       mysql < DDL.sql
       echo "Tabelas criadas."
       sudo touch /usr/lib/jvm/java-8-openjdk-amd64/tabelas_criadas
@@ -38,23 +60,6 @@ tasks:
       echo "-----------------------------------------"
       mvn clean package
 
-  # Exibe as tabelas criadas no banco
-  - openMode: split-left
-    command: |
-      PS1='(Digite "mysql ital_dev" para entrar):$ '
-      clear
-      echo "-----------------------------------------"
-      echo "Aguardando a criação das tabelas..."
-      echo "-----------------------------------------"
-      while true; do
-        if [ -f arquivo.txt ]; then
-          break
-        else
-          sleep 1
-        fi
-      done
-      clear
-      mysql itall_dev -e "show tables"
 
 # Estas extensões são reclamadas pelo ambiente se usado o vscode.
 vscode:
