--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
         	<version>8.5.97</version>
         	<scope>provided</scope>
     	</dependency>
+		<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-maven-plugin -->
+		<dependency>
+    		<groupId>org.eclipse.jetty</groupId>
+    		<artifactId>jetty-maven-plugin</artifactId>
+    		<version>11.0.19</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -95,7 +101,17 @@
 						</configuration>
 					</execution>
             	</executions>
-        	</plugin>			
+        	</plugin>
+			<plugin>
+            	<groupId>org.eclipse.jetty</groupId>
+            	<artifactId>jetty-maven-plugin</artifactId>
+            	<version>11.0.19</version> 
+            	<configuration>
+	                <webApp>
+                    	<contextPath>/</contextPath>
+                	</webApp>
+            	</configuration>
+        	</plugin>
 		</plugins>
 	</build>
 </project>
