--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 		<dependency>
     		<groupId>org.eclipse.jetty</groupId>
     		<artifactId>jetty-maven-plugin</artifactId>
-    		<version>11.0.19</version>
+    		<version>9.4.44.v20210927</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -105,7 +105,7 @@
 			<plugin>
             	<groupId>org.eclipse.jetty</groupId>
             	<artifactId>jetty-maven-plugin</artifactId>
-            	<version>11.0.19</version> 
+            	<version>9.4.44.v20210927</version> 
             	<configuration>
 	                <webApp>
                     	<contextPath>/</contextPath>
