--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,6 +11,29 @@ ports:
   onOpen: ignore
   visibility: private
 
+tasks:
+  # Instala o Java 1.8 e muda o ambiente para esta versão
+  - name: Server
+    init: |
+      clear
+      echo "-----------------------------------------"
+      echo "Instalando o Java 8...
+      echo "-----------------------------------------"
+      sudo apt-get update
+      sudo apt-get install -y openjdk-8-jdk
+      export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
+      export PATH=$JAVA_HOME/bin:$PATH
+      echo "-----------------------------------------"
+      echo "Aguardando o MySQL subir..."
+      echo "-----------------------------------------"
+      while ! mysqladmin ping -h localhost --silent; do
+          sleep 1
+      done
+      echo "-----------------------------------------"
+      echo "Criando as tabelas no banco de dados..."
+      echo "-----------------------------------------"
+      mysql < DDL.sql
+
 vscode:
   extensions:
     - vscjava.vscode-java-pack
