--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -12,7 +12,8 @@ ports:
   visibility: private
 
 tasks:
-  - init: |
+  - name: WebServer
+    init: |
       sudo apt-get update
       sudo apt-get install -y openjdk-8-jdk
       export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
