--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,6 +14,9 @@ ports:
 tasks:
   - name: WebServer
     init: |
+      echo ----------------
+      echo Iniciando...
+      echo ----------------
       wget https://archive.apache.org/dist/tomcat/tomcat-8/v8.5.70/bin/apache-tomcat-8.5.70.tar.gz -P ~
       tar -xzvf ~/apache-tomcat-8.5.70.tar.gz -C ~
       rm ~/apache-tomcat-8.5.70.tar.gz
