--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,17 +14,29 @@ ports:
 tasks:
   - name: WebServer
     init: |
-      echo ----------------
-      echo Iniciando...
-      echo ----------------
-      wget https://archive.apache.org/dist/tomcat/tomcat-8/v8.5.70/bin/apache-tomcat-8.5.70.tar.gz -P ~
-      tar -xzvf ~/apache-tomcat-8.5.70.tar.gz -C ~
-      rm ~/apache-tomcat-8.5.70.tar.gz
-      export CATALINA_HOME=$HOME/apache-tomcat-8.5.70
+      echo ------------------------------------------------------------------------
+      echo Instaling Tomcat 8.5.97
+      echo ------------------------------------------------------------------------
+      wget https://archive.apache.org/dist/tomcat/tomcat-8/v8.5.97/bin/apache-tomcat-8.5.97.tar.gz -P ~
+      tar -xzvf ~/apache-tomcat-8.5.97.tar.gz -C ~
+      rm ~/apache-tomcat-8.5.97.tar.gz
+      export CATALINA_HOME=$HOME/apache-tomcat-8.5.97
+      export CATALINA_BASE=$CATALINA_HOME
       export PATH=$CATALINA_HOME/bin:$PATH
+      export CATALINA_TMPDIR=$CATALINA_HOME/temp
+      export CLASSPATH=$CATALINA_HOME/bin/bootstrap.jar;$CATALINA_HOME/bin/tomcat-juli.jar
+      export MAVEN_OPTS=-Dfile.encoding=UTF-8
+      export CATALINA_OPTS=-Dfile.encoding=UTF-8
+
+      echo
+      echo ------------------------------------------------------------------------
+      echo Instaling java-8-openjdk-amd64...
+      echo ------------------------------------------------------------------------
       sudo apt-get update
       sudo apt-get install -y openjdk-8-jdk
+      sudo rm /usr/lib/jvm java-8-openjdk-amd64
       export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
+      export JRE_HOME=$JAVA_HOME
       export PATH=$JAVA_HOME/bin:$PATH
 
 vscode:
