--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -34,7 +34,7 @@ tasks:
       echo ------------------------------------------------------------------------
       sudo apt-get update
       sudo apt-get install -y openjdk-8-jdk
-      sudo rm /usr/lib/jvm java-8-openjdk-amd64
+      sudo rm /usr/lib/jvm/java-8-openjdk-amd64
       export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
       export JRE_HOME=$JAVA_HOME
       export PATH=$JAVA_HOME/bin:$PATH
