--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -35,10 +35,14 @@ tasks:
       sudo apt-get update
       sudo apt-get install -y openjdk-8-jdk
       sudo rm /usr/lib/jvm/java-8-openjdk-amd64
-      export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
+      export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
       export JRE_HOME=$JAVA_HOME
       export PATH=$JAVA_HOME/bin:$PATH
-
+      echo ------------------------------------------------------------------------
+      echo Criando as tabelas...
+      echo ------------------------------------------------------------------------
+      mysql < DDL.sql
+      
 vscode:
   extensions:
     - vscjava.vscode-java-pack
