--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -45,10 +45,7 @@ tasks:
       mysql < DDL.sql
 
   - openMode: split-right
-    command: |
-      PS1='(Digite "mysql ital_dev" para entrar):$ '
-      clear
-      mysql itall_dev -e "show tables"
+    command: mysql itall_dev -e "show tables"
 
       
 vscode:
