--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -66,7 +66,7 @@ tasks:
       done
       clear
       mysql itall_dev -e "show tables"
-      echo Digite "mysql ital_dev" para entrar
+      echo Digite "mysql itall_dev" para entrar
     name: MySQL
       
 vscode:
