--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -20,13 +20,6 @@ tasks:
       wget https://archive.apache.org/dist/tomcat/tomcat-8/v8.5.97/bin/apache-tomcat-8.5.97.tar.gz -P /workspace
       tar -xzvf /workspace/apache-tomcat-8.5.97.tar.gz -C /workspace
       rm /workspace/apache-tomcat-8.5.97.tar.gz
-      export CATALINA_HOME=/workspace/apache-tomcat-8.5.97
-      export CATALINA_BASE=$CATALINA_HOME
-      export PATH=$CATALINA_HOME/bin:$PATH
-      export CATALINA_TMPDIR=$CATALINA_HOME/temp
-      export CLASSPATH=$CATALINA_HOME/bin/bootstrap.jar;$CATALINA_HOME/bin/tomcat-juli.jar
-      export MAVEN_OPTS=-Dfile.encoding=UTF-8
-      export CATALINA_OPTS=-Dfile.encoding=UTF-8
 
       echo
       echo ------------------------------------------------------------------------
@@ -35,21 +28,15 @@ tasks:
       sudo apt-get update
       sudo apt-get install -y openjdk-8-jdk
       sudo rm /usr/lib/jvm/java-1.8.0-openjdk-amd64
-      export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
-      export JRE_HOME=$JAVA_HOME
-      export PATH=$JAVA_HOME/bin:$PATH
+
       echo
       echo ------------------------------------------------------------------------
-      echo Criando as tabelas no banco de dados...
+      echo Creating tables...
       echo ------------------------------------------------------------------------
       mysql < DDL.sql
       sudo touch ~/tabelas_criadas
       echo
-      echo ------------------------------------------------------------------------
-      echo Compilando o projeto...
-      echo ------------------------------------------------------------------------
-      mvn clean package
-
+      ./startweb.sh
 
   - command: |
       PS1='(MySQL) $ '
