--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -45,8 +45,8 @@ tasks:
       echo export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64           >> ~/.bashrc
       echo export JRE_HOME=/usr/lib/jvm/java-8-openjdk-amd64            >> ~/.bashrc
 
-      echo export PATH=/workspace/apache-tomcat-8.5.97/bin:$PATH        >> ~/.bashrc
-      echo export PATH=/usr/lib/jvm/java-8-openjdk-amd64/bin:$PATH      >> ~/.bashrc  
+      echo export PATH="/workspace/apache-tomcat-8.5.97/bin:\$PATH"     >> ~/.bashrc
+      echo export PATH="/usr/lib/jvm/java-8-openjdk-amd64/bin:\$PATH"   >> ~/.bashrc  
       source ~/.bashrc
 
       echo
