--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,6 +11,10 @@ ports:
   onOpen: ignore
   visibility: private
 
+- port: 8005
+  onOpen: ignore
+  visibility: private
+
 tasks:
   - name: WebServer
     init: |
@@ -35,17 +39,17 @@ tasks:
       echo ------------------------------------------------------------------------
       echo Enviroments Variables
       echo ------------------------------------------------------------------------
-      echo export VSTOMCAT='apache-tomcat-8.5.97'                       >> ~/.bashrc
-      echo export CATALINA_HOME=/workspace/apache-tomcat-8.5.97         >> ~/.bashrc
-      echo export CATALINA_BASE=/workspace/apache-tomcat-8.5.97         >> ~/.bashrc
-      echo export CATALINA_TMPDIR=/workspace/apache-tomcat-8.5.97/temp  >> ~/.bashrc
-      echo export CLASSPATH=/workspace/apache-tomcat-8.5.97/bin/bootstrap.jar;/workspace/apache-tomcat-8.5.97/bin/tomcat-juli.jar >> ~/.bashrc
+      echo export VSTOMCAT=\"apache-tomcat-8.5.97\"                     >> ~/.bashrc
+      echo export CATALINA_HOME=/workspace/\$VSTOMCAT                   >> ~/.bashrc
+      echo export CATALINA_BASE=\$CATALINA_HOME                         >> ~/.bashrc
+      echo export CATALINA_TMPDIR=\$CATALINA_HOME/temp                  >> ~/.bashrc
+      echo export CLASSPATH=\$CATALINA_HOME/bin/bootstrap.jar;/workspace/apache-tomcat-8.5.97/bin/tomcat-juli.jar >> ~/.bashrc
       echo export MAVEN_OPTS=-Dfile.encoding=UTF-8                      >> ~/.bashrc
       echo export CATALINA_OPTS=-Dfile.encoding=UTF-8                   >> ~/.bashrc
       echo export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64           >> ~/.bashrc
-      echo export JRE_HOME=\$JAVA_HOME            >> ~/.bashrc
+      echo export JRE_HOME=\$JAVA_HOME                                  >> ~/.bashrc
 
-      echo export PATH=\"/workspace/apache-tomcat-8.5.97/bin:\$PATH\"   >> ~/.bashrc
+      echo export PATH=\"\$CATALINA_HOME/bin:\$PATH\"                   >> ~/.bashrc
       echo export PATH=\"/usr/lib/jvm/java-8-openjdk-amd64/bin:\$PATH\" >> ~/.bashrc  
       source ~/.bashrc
 
@@ -57,6 +61,7 @@ tasks:
       sudo touch ~/tabelas_criadas
       echo
       ./startweb.sh
+      mysql itall_dev -e "show tables"
 
   - command: |
       PS1='(MySQL) $ '
@@ -71,6 +76,7 @@ tasks:
           sleep 1
         fi
       done
+      source ~/.bashrc
       clear
       mysql itall_dev -e "show tables"
       echo Digite "mysql itall_dev" para entrar
