--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -43,7 +43,7 @@ tasks:
       echo export CATALINA_HOME=/workspace/\$VSTOMCAT                   >> ~/.bashrc
       echo export CATALINA_BASE=\$CATALINA_HOME                         >> ~/.bashrc
       echo export CATALINA_TMPDIR=\$CATALINA_HOME/temp                  >> ~/.bashrc
-      echo export CLASSPATH=\$CATALINA_HOME/bin/bootstrap.jar;/workspace/apache-tomcat-8.5.97/bin/tomcat-juli.jar >> ~/.bashrc
+      echo export CLASSPATH=\"\$CATALINA_HOME/bin/bootstrap.jar;\$CATALINA_HOME/bin/tomcat-juli.jar\" >> ~/.bashrc
       echo export MAVEN_OPTS=-Dfile.encoding=UTF-8                      >> ~/.bashrc
       echo export CATALINA_OPTS=-Dfile.encoding=UTF-8                   >> ~/.bashrc
       echo export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64           >> ~/.bashrc
