--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -25,7 +25,7 @@ tasks:
       tar -xzvf /workspace/apache-tomcat-8.5.97.tar.gz -C /workspace
       rm /workspace/apache-tomcat-8.5.97.tar.gz
       #Alteração para executar a aplicação da raiz
-      sudo cp ./tomcat_server.xml /workspace/apache-tomcat-8.5.97/conf/server.xml
+      #sudo cp ./tomcat_server.xml /workspace/apache-tomcat-8.5.97/conf/server.xml
 
       echo
       echo ------------------------------------------------------------------------
